<resources>
    <string name="app_name">Just Java</string>
    <string name="view_toppings">toppings</string>
    <string name="text_whipped_cream">Whipped cream</string>
    <string name="text_chocolate">Chocolate</string>
    <string name="text_quantity">quantity</string>
    <string name="mion">-</string>
    <string name="_2">2</string>
    <string name="plus">+</string>
    <string name="text_order">order</string>
    <string name="name">Name</string>
    <string name="thanks">Thank you!</string>
    <string name="total">Total: $</string>
    <string name="quantity">Quantity:</string>
    <string name="chocolate">Add chocolate?</string>
    <string name="cream">Add whipped cream?</string>
</resources>
